my-apps/home/project-nomad/flatnotes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flatnotes
  namespace: project-nomad
  labels:
    app: project-nomad-flatnotes
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: project-nomad-flatnotes
  template:
    metadata:
      labels:
        app: project-nomad-flatnotes
    spec:
      enableServiceLinks: false
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: flatnotes
          image: dullage/flatnotes:v5.5.5
          startupProbe:
            httpGet: {path: /, port: http}
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 60
          readinessProbe:
            httpGet: {path: /, port: http}
            periodSeconds: 10
            timeoutSeconds: 3
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              cpu: 15m
              memory: 100Mi
            limits:
              memory: 256Mi
          volumeMounts:
            - name: flatnotes-data
              mountPath: /data
      volumes:
        - name: recovery
          configMap:
            name: flatnotes-recovery-script
            defaultMode: 0444
        - name: flatnotes-data
          persistentVolumeClaim:
            claimName: flatnotes-data
