my-apps/home/project-nomad/flatnotes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flatnotes
  namespace: project-nomad
  labels:
    app: project-nomad-flatnotes
spec:
  selector:
    app: project-nomad-flatnotes
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  type: ClusterIP
